--- a/PersonalPortal/PersonalPortal/Web.config
+++ b/PersonalPortal/PersonalPortal/Web.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
   <appSettings>
-    <add key="ConnectionString" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|/PersonalPortal.accdb;Persist Security Info=False"/>
+    <add key="ConnectionString" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|/PersonalPortal.accdb;Persist Security Info=False" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -19,14 +19,15 @@
     <rewrite>
       <rules>
         <rule name="Html">
-          <match url="^(|Views/)([a-zA-Z0-9]{1,})(|\.html)$"/>
-          <action type="Rewrite" url="Views/{R:2}.html"/>
+          <match url="^(|Views/)([a-zA-Z0-9]{1,})(|\.html)$" />
+          <action type="Rewrite" url="Views/{R:2}.html" />
         </rule>
         <rule name="ApiController">
-          <match url="^Controller/([a-zA-Z0-9]*)/([a-zA-Z0-9]*)"/>
-          <action type="Rewrite" url="Controller.ashx?Controller={R:1}/{R:2}"/>
+          <match url="^Controller/([a-zA-Z0-9]*)/([a-zA-Z0-9]*)" />
+          <action type="Rewrite" url="Controller.ashx?Controller={R:1}/{R:2}" />
         </rule>
       </rules>
     </rewrite>
+        <httpRedirect enabled="false" destination="" />
   </system.webServer>
 </configuration>
