--- a/PersonalPortal/PersonalPortal/PersonalPortal.csproj
+++ b/PersonalPortal/PersonalPortal/PersonalPortal.csproj
@@ -189,6 +189,8 @@
     <Content Include="Scripts\Developer\Plugins\jquery-rss\src\jquery.rss.js" />
     <Content Include="Scripts\AngularInstance.js" />
     <Content Include="Scripts\JQuery3-1-1.js" />
+    <Content Include="Style\Css\HelloWorld.css" />
+    <Content Include="Style\Css\Index.css" />
     <Content Include="Views\HelloWorld.html" />
     <Content Include="Views\Index.html" />
     <Content Include="Views\Portfolio.html" />
@@ -217,6 +219,7 @@
     <Compile Include="Controllers\PersonalData.cs" />
     <Compile Include="Controllers\Sort.cs" />
     <Compile Include="Models\ApplyModels\DynamicProgrammingView.cs" />
+    <Compile Include="Models\ApplyModels\ShortCutView.cs" />
     <Compile Include="Models\ResultModels\AlgorithmModel.cs" />
     <Compile Include="Models\ResultModels\ErrorModel.cs" />
     <Compile Include="Models\ResultModels\IndexModel.cs" />
@@ -225,7 +228,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Style\Css\" />
     <Folder Include="Style\Fonts\" />
   </ItemGroup>
   <PropertyGroup>
