helloworld界面增加天气显示

--- a/PersonalPortal/PersonalPortal/PersonalPortal.csproj
+++ b/PersonalPortal/PersonalPortal/PersonalPortal.csproj
@@ -67,6 +67,58 @@
     <Content Include="Controller.ashx" />
     <Content Include="Images\bg.png" />
     <Content Include="favicon.ico" />
+    <Content Include="Images\logo.png" />
+    <Content Include="Images\weather\100.png" />
+    <Content Include="Images\weather\101.png" />
+    <Content Include="Images\weather\102.png" />
+    <Content Include="Images\weather\103.png" />
+    <Content Include="Images\weather\104.png" />
+    <Content Include="Images\weather\200.png" />
+    <Content Include="Images\weather\201.png" />
+    <Content Include="Images\weather\202.png" />
+    <Content Include="Images\weather\203.png" />
+    <Content Include="Images\weather\204.png" />
+    <Content Include="Images\weather\205.png" />
+    <Content Include="Images\weather\206.png" />
+    <Content Include="Images\weather\207.png" />
+    <Content Include="Images\weather\208.png" />
+    <Content Include="Images\weather\209.png" />
+    <Content Include="Images\weather\210.png" />
+    <Content Include="Images\weather\211.png" />
+    <Content Include="Images\weather\212.png" />
+    <Content Include="Images\weather\213.png" />
+    <Content Include="Images\weather\300.png" />
+    <Content Include="Images\weather\301.png" />
+    <Content Include="Images\weather\302.png" />
+    <Content Include="Images\weather\303.png" />
+    <Content Include="Images\weather\304.png" />
+    <Content Include="Images\weather\305.png" />
+    <Content Include="Images\weather\306.png" />
+    <Content Include="Images\weather\307.png" />
+    <Content Include="Images\weather\308.png" />
+    <Content Include="Images\weather\309.png" />
+    <Content Include="Images\weather\310.png" />
+    <Content Include="Images\weather\311.png" />
+    <Content Include="Images\weather\312.png" />
+    <Content Include="Images\weather\313.png" />
+    <Content Include="Images\weather\400.png" />
+    <Content Include="Images\weather\401.png" />
+    <Content Include="Images\weather\402.png" />
+    <Content Include="Images\weather\403.png" />
+    <Content Include="Images\weather\404.png" />
+    <Content Include="Images\weather\405.png" />
+    <Content Include="Images\weather\406.png" />
+    <Content Include="Images\weather\407.png" />
+    <Content Include="Images\weather\500.png" />
+    <Content Include="Images\weather\501.png" />
+    <Content Include="Images\weather\502.png" />
+    <Content Include="Images\weather\503.png" />
+    <Content Include="Images\weather\504.png" />
+    <Content Include="Images\weather\507.png" />
+    <Content Include="Images\weather\508.png" />
+    <Content Include="Images\weather\900.png" />
+    <Content Include="Images\weather\901.png" />
+    <Content Include="Images\weather\999.png" />
     <Content Include="Scripts\AngularJs1.4.6.js" />
     <Content Include="Scripts\bootstrap-3.3.7-dist\css\bootstrap-theme.css.map" />
     <Content Include="Scripts\bootstrap-3.3.7-dist\css\bootstrap-theme.min.css.map" />
