--- a/PersonalPortal/PersonalPortal/PersonalPortal.csproj
+++ b/PersonalPortal/PersonalPortal/PersonalPortal.csproj
@@ -129,6 +129,14 @@
     <Content Include="Scripts\bootstrap-3.3.7-dist\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Scripts\bootstrap-3.3.7-dist\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Scripts\bootstrap-3.3.7-dist\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Scripts\code-beautify\lib\beautify-css.js" />
+    <Content Include="Scripts\code-beautify\lib\beautify-html.js" />
+    <Content Include="Scripts\code-beautify\lib\beautify.js" />
+    <Content Include="Scripts\code-beautify\lib\cli.js" />
+    <Content Include="Scripts\code-beautify\lib\unpackers\javascriptobfuscator_unpacker.js" />
+    <Content Include="Scripts\code-beautify\lib\unpackers\myobfuscate_unpacker.js" />
+    <Content Include="Scripts\code-beautify\lib\unpackers\p_a_c_k_e_r_unpacker.js" />
+    <Content Include="Scripts\code-beautify\lib\unpackers\urlencode_unpacker.js" />
     <Content Include="Scripts\Cookie.js" />
     <Content Include="Scripts\Developer\Less\base.less" />
     <Content Include="Scripts\Developer\Less\mixins.less" />
@@ -189,6 +197,7 @@
     <Content Include="Scripts\Developer\Plugins\jquery-rss\package.json" />
     <Content Include="Scripts\Developer\Plugins\jquery-rss\README.md" />
     <Content Include="Scripts\bootstrap-3.3.7-dist\css\docs.min.css.map" />
+    <Content Include="Scripts\code-beautify\config\defaults.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -248,6 +257,7 @@
     <Content Include="Views\Portfolio.html" />
     <Content Include="Views\Resume.html" />
     <Content Include="Views\ToolsBox\Encryption.html" />
+    <Content Include="Views\ToolsBox\CodeBeautify.html" />
     <Content Include="Views\ToolsBox\Json.html" />
     <Content Include="Views\ToolsBox\Regexp.html" />
     <Content Include="Web.config">
