--- a/PersonalPortal/PersonalPortal/Web.config
+++ b/PersonalPortal/PersonalPortal/Web.config
@@ -29,5 +29,10 @@
       </rules>
     </rewrite>
         <httpRedirect enabled="false" destination="" />
+        <httpProtocol>
+            <customHeaders>
+                <remove name="X-Powered-By" />
+            </customHeaders>
+        </httpProtocol>
   </system.webServer>
 </configuration>
