--- a/PersonalPortal/PersonalPortal/Web.config
+++ b/PersonalPortal/PersonalPortal/Web.config
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
   <appSettings>
-    <add key="ConnectionString" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|/PersonalPortal.accdb;Persist Security Info=False" />
+    <add key="ConnectionString" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|/PersonalPortal.accdb;Persist Security Info=False"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5.2"/>
+    <httpRuntime targetFramework="4.5.2"/>
     <httpModules>
     </httpModules>
   </system.web>
@@ -19,20 +19,30 @@
     <rewrite>
       <rules>
         <rule name="Html">
-          <match url="^(|Views/)([a-zA-Z0-9]{1,})(|\.html)$" />
-          <action type="Rewrite" url="Views/{R:2}.html" />
+          <match url="^(|Views/)([a-zA-Z0-9]{1,})(|\.html)$"/>
+          <action type="Rewrite" url="Views/{R:2}.html"/>
         </rule>
         <rule name="ApiController">
-          <match url="^Controller/([a-zA-Z0-9]*)/([a-zA-Z0-9]*)" />
-          <action type="Rewrite" url="Controller.ashx?Controller={R:1}/{R:2}" />
+          <match url="^Controller/([a-zA-Z0-9]*)/([a-zA-Z0-9]*)"/>
+          <action type="Rewrite" url="Controller.ashx?Controller={R:1}/{R:2}"/>
         </rule>
       </rules>
     </rewrite>
-        <httpRedirect enabled="false" destination="" />
-        <httpProtocol>
-            <customHeaders>
-                <remove name="X-Powered-By" />
-            </customHeaders>
-        </httpProtocol>
+    <httpRedirect enabled="false" destination=""/>
+    <httpProtocol>
+      <customHeaders>
+        <remove name="X-Powered-By"/>
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
+  <system.codedom>
+    <compilers>
+      <compiler language="c#;cs;csharp" extension=".cs"
+        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
+        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+    </compilers>
+  </system.codedom>
 </configuration>
