--- a/PersonalPortal/PersonalPortal/Web.config
+++ b/PersonalPortal/PersonalPortal/Web.config
@@ -2,8 +2,13 @@
 
 <configuration>
   <appSettings>
-    <add key="ConnectionString" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|/PersonalPortal.accdb;Persist Security Info=False"/>
+    <!--<add key="ConnectionString" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|/PersonalPortal.accdb;Persist Security Info=False"/>-->
+    <add key="ConnectionString" value="Data Source=|DataDirectory|\PersonalPortal.db;Version=3;"/>
   </appSettings>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+    <supportedRuntime version="v2.0.50727"/>
+  </startup>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
