提交多叉树模拟页面

--- a/PersonalPortal/PersonalPortal/PersonalPortal.csproj
+++ b/PersonalPortal/PersonalPortal/PersonalPortal.csproj
@@ -297,6 +297,7 @@
     <Content Include="Style\Css\HelloWorld.css" />
     <Content Include="Style\Css\Index.css" />
     <Content Include="Views\Algorithm\AStar.html" />
+    <Content Include="Views\Algorithm\Tree.html" />
     <Content Include="Views\HelloWorld.html" />
     <Content Include="Views\Index.html" />
     <Content Include="Views\Portfolio.html" />
