--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,4 @@ ModelManifest.xml
 .fake/
 /PersonalPortal/PersonalPortal/Files
 /PersonalPortal/PersonalPortal/Scripts
+/PersonalPortal/PersonalPortal/ErrorLog
