修复类列表无法加载的问题

--- a/PersonalPortal/PersonalPortal/PersonalPortal.csproj
+++ b/PersonalPortal/PersonalPortal/PersonalPortal.csproj
@@ -298,6 +298,7 @@
     <Content Include="Style\Css\HelloWorld.css" />
     <Content Include="Style\Css\Index.css" />
     <Content Include="Style\Css\Algorithm\AutoUI.css" />
+    <Content Include="Style\Css\UnitTest.css" />
     <Content Include="Views\Algorithm\AStar.html" />
     <Content Include="Views\Algorithm\Tree.html" />
     <Content Include="Views\HelloWorld.html" />
