--- a/PersonalPortal/PersonalPortal/PersonalPortal.csproj
+++ b/PersonalPortal/PersonalPortal/PersonalPortal.csproj
@@ -296,12 +296,14 @@
     <Content Include="Scripts\switch-button\bootstrap-switch.css" />
     <Content Include="Scripts\switch-button\bootstrap-switch.js" />
     <Content Include="Style\Css\Algorithm\AStar.css" />
+    <Content Include="Style\Css\ApiTest.css" />
     <Content Include="Style\Css\HelloWorld.css" />
     <Content Include="Style\Css\Index.css" />
     <Content Include="Style\Css\Algorithm\AutoUI.css" />
     <Content Include="Style\Css\UnitTest.css" />
     <Content Include="Views\Algorithm\AStar.html" />
     <Content Include="Views\Algorithm\Tree.html" />
+    <Content Include="Views\ApiTest.html" />
     <Content Include="Views\HelloWorld.html" />
     <Content Include="Views\Index.html" />
     <Content Include="Views\Portfolio.html" />
