--- a/PersonalPortal/PersonalPortal/Web.config
+++ b/PersonalPortal/PersonalPortal/Web.config
@@ -18,7 +18,7 @@
   <system.webServer>
     <defaultDocument>
       <files>
-        <add value="Views/Index.html"></add>
+        <add value="Views/NewIndex.html"></add>
       </files>
     </defaultDocument>
     <rewrite>
